option('battery', type : 'feature', value : 'enabled')
option('broadcast', type : 'feature', value : 'enabled')
option('bulk', type : 'feature', value : 'enabled')
#option('buildtime', type : 'feature', value : 'enabled')
option('color', type : 'feature', value : 'disabled')
option('coreaudio', type : 'feature', value : 'disabled')
option('faad', type : 'feature', value : 'enabled')
option('ffmpeg', type : 'feature', value : 'disabled')
option('hid', type : 'feature', value : 'enabled')
option('hss1394', type : 'feature', value : 'disabled')
option('lilv', type : 'feature', value : 'enabled')
option('localecompare', type : 'feature', value : 'enabled')
option('macappstore', type : 'feature', value : 'enabled')
option('mad', type : 'feature', value : 'enabled')
#option('mediafoundation', type : 'feature', value : 'enabled')
option('modplug', type : 'feature', value : 'disabled')
option('opengles', type : 'feature', value : 'disabled')
#option('optimize', type : 'string', value : 'native')
option('opus', type : 'feature', value : 'enabled')
#option('perftools', type : 'string', value : 'enabled')
option('vamp', type : 'feature', value : 'enabled')
option('vinylcontrol', type : 'feature', value : 'enabled')
option('wv', type : 'feature', value : 'disabled')

option('qt_sqlite_plugin', type : 'feature', value : 'disabled')

option('settingsFile', type: 'string', value: 'mixxx.cfg')
option('settingsPath', type: 'string', value: '.mixxx')
