mixxx_sources += files([ 
    'errordialoghandler.cpp',
#    'main.cpp',
    'mixxxapplication.cpp',
    'mixxx.cpp',
])

mixxx_headers += files([ 
    'errordialoghandler.h',
    'mixxxapplication.h',
    'mixxx.h',
])

includes += include_directories('.')

subdir('analyzer')
subdir('broadcast')
subdir('control')
subdir('controllers')
subdir('database')
subdir('dialog')
subdir('effects')
subdir('encoder')
subdir('engine')
subdir('library')
subdir('mixer')
subdir('musicbrainz')
subdir('preferences')
subdir('proto')
subdir('recording')
subdir('skin')
subdir('soundio')
subdir('sources')
#subdir('test')
subdir('track')
subdir('util')
subdir('vinylcontrol')
subdir('waveform')
subdir('widget')
