mixxx_sources += files([ 
    'analyzerbeats.cpp',
    'analyzerebur128.cpp',
    'analyzergain.cpp',
    'analyzerkey.cpp',
    'analyzersilence.cpp',
    'analyzerthread.cpp',
    'analyzerwaveform.cpp',
    'trackanalysisscheduler.cpp',
])

mixxx_headers += files([ 
    'analyzerthread.h',
    'trackanalysisscheduler.h',
])

mixxx_ui += files([ 
])
subdir('plugins')
