mixxx_sources += files([ 
    'controlaudiotaperpot.cpp',
    'controlbehavior.cpp',
    'control.cpp',
    'controleffectknob.cpp',
    'controlencoder.cpp',
    'controlindicator.cpp',
    'controllinpotmeter.cpp',
    'controllogpotmeter.cpp',
    'controlmodel.cpp',
    'controlobject.cpp',
    'controlobjectscript.cpp',
    'controlpotmeter.cpp',
    'controlproxy.cpp',
    'controlpushbutton.cpp',
    'controlttrotary.cpp',
])

mixxx_headers += files([ 
    'controlaudiotaperpot.h',
    'controleffectknob.h',
    'controlencoder.h',
    'control.h',
    'controlindicator.h',
    'controllinpotmeter.h',
    'controllogpotmeter.h',
    'controlmodel.h',
    'controlobject.h',
    'controlobjectscript.h',
    'controlpotmeter.h',
    'controlproxy.h',
    'controlpushbutton.h',
    'controlttrotary.h',
])
