mixxx_sources += files([ 
    'colorjsproxy.cpp',
    'controller.cpp',
    'controllerdebug.cpp',
    'controllerengine.cpp',
    'controllerenumerator.cpp',
    'controllerinputmappingtablemodel.cpp',
    'controllerlearningeventfilter.cpp',
    'controllermanager.cpp',
    'controllermappingtablemodel.cpp',
    'controlleroutputmappingtablemodel.cpp',
    'controllerpresetfilehandler.cpp',
    'controllerpresetinfo.cpp',
    'controllerpresetinfoenumerator.cpp',
    'controlpickermenu.cpp',
    'dlgcontrollerlearning.cpp',
    'dlgprefcontroller.cpp',
    'dlgprefcontrollers.cpp',
    'learningutils.cpp',
    'softtakeover.cpp',
])

mixxx_headers += files([ 
    'colorjsproxy.h',
    'controllerengine.h',
    'controllerenumerator.h',
    'controller.h',
    'controllerinputmappingtablemodel.h',
    'controllerlearningeventfilter.h',
    'controllermanager.h',
    'controllermappingtablemodel.h',
    'controlleroutputmappingtablemodel.h',
    'controlpickermenu.h',
    'dlgcontrollerlearning.h',
    'dlgprefcontroller.h',
    'dlgprefcontrollers.h',
])

mixxx_ui += files([ 
    'dlgcontrollerlearning.ui',
    'dlgprefcontrollerdlg.ui',
    'dlgprefcontrollersdlg.ui',
])
subdir('bulk')
subdir('delegates')
subdir('hid')
subdir('keyboard')
subdir('midi')
