mixxx_sources += files([ 
    'effectbuttonparameterslot.cpp',
    'effectchain.cpp',
    'effectchainmanager.cpp',
    'effectchainslot.cpp',
    'effect.cpp',
    'effectmanifest.cpp',
    'effectmanifestparameter.cpp',
    'effectparameter.cpp',
    'effectparameterslotbase.cpp',
    'effectparameterslot.cpp',
    'effectrack.cpp',
    'effectsbackend.cpp',
    'effectslot.cpp',
    'effectsmanager.cpp',
])

mixxx_headers += files([
    'effectbuttonparameterslot.h',
    'effectchain.h',
    'effectchainmanager.h',
    'effectchainslot.h',
    'effect.h',
    'effectparameter.h',
    'effectparameterslotbase.h',
    'effectparameterslot.h',
    'effectrack.h',
    'effectsbackend.h',
    'effectslot.h',
    'effectsmanager.h',
])

subdir('builtin')
subdir('lv2')
