mixxx_sources += files([ 
    'encoderbroadcastsettings.cpp',
    'encoder.cpp',
    'encoderffmpegcore.cpp',
    'encoderffmpegmp3.cpp',
    'encoderffmpegresample.cpp',
    'encoderffmpegvorbis.cpp',
    'encoderflacsettings.cpp',
    'encodermp3.cpp',
    'encodermp3settings.cpp',
    'encodersndfileflac.cpp',
    'encodervorbis.cpp',
    'encodervorbissettings.cpp',
    'encoderwave.cpp',
    'encoderwavesettings.cpp',
])

if has_opus
  mixxx_sources += files([ 
    'encoderopus.cpp',
    'encoderopussettings.cpp',
  ])
endif
