mixxx_sources += files([ 
    'channelmixer_autogen.cpp',
    'enginebuffer.cpp',
    'enginedelay.cpp',
    'enginemaster.cpp',
    'engineobject.cpp',
    'enginepregain.cpp',
    'enginesidechaincompressor.cpp',
    'enginetalkoverducking.cpp',
    'enginevumeter.cpp',
    'engineworker.cpp',
    'engineworkerscheduler.cpp',
    'enginexfader.cpp',
    'positionscratchcontroller.cpp',
    'readaheadmanager.cpp',
])

mixxx_headers += files([ 
    'enginebuffer.h',
    'enginedelay.h',
    'enginemaster.h',
    'engineobject.h',
    'enginetalkoverducking.h',
    'enginevumeter.h',
    'engineworker.h',
    'engineworkerscheduler.h',
])

mixxx_ui += files([ 
])
subdir('bufferscalers')
subdir('cachingreader')
subdir('channels')
subdir('controls')
subdir('effects')
subdir('filters')
subdir('sidechain')
subdir('sync')
