mixxx_sources += files([ 
    'auxiliary.cpp',
    'baseplayer.cpp',
    'basetrackplayer.cpp',
    'deck.cpp',
    'microphone.cpp',
    'playerinfo.cpp',
    'playermanager.cpp',
    'previewdeck.cpp',
    'samplerbank.cpp',
    'sampler.cpp',
])

mixxx_headers += files([ 
    'auxiliary.h',
    'baseplayer.h',
    'basetrackplayer.h',
    'deck.h',
    'microphone.h',
    'playerinfo.h',
    'playermanager.h',
    'previewdeck.h',
    'samplerbank.h',
    'sampler.h',
])

mixxx_ui += files([ 
])
