mixxx_sources += files([ 
    'crc.c',
    'acoustidclient.cpp',
    'chromaprinter.cpp',
    'gzip.cpp',
    'musicbrainzclient.cpp',
    'network.cpp',
    'tagfetcher.cpp',
])

mixxx_headers += files([ 
    'acoustidclient.h',
    'chromaprinter.h',
    'musicbrainzclient.h',
    'network.h',
    'tagfetcher.h',
])

mixxx_ui += files([ 
])
