mixxx_sources += files([ 
    'broadcastprofile.cpp',
    'broadcastsettings.cpp',
    'broadcastsettings_legacy.cpp',
    'broadcastsettingsmodel.cpp',
    'configobject.cpp',
    'dlgpreferencepage.cpp',
    'effectsettingsmodel.cpp',
    'replaygainsettings.cpp',
    'settingsmanager.cpp',
    'upgrade.cpp',
])

mixxx_headers += files([ 
    'broadcastprofile.h',
    'broadcastsettings.h',
    'broadcastsettingsmodel.h',
    'dlgpreferencepage.h',
    'effectsettingsmodel.h',
    'settingsmanager.h',
])

mixxx_ui += files([ 
])
subdir('dialog')
