mixxx_sources += files([ 
    'colorschemeparser.cpp',
    'imgcolor.cpp',
    'imginvert.cpp',
    'imgloader.cpp',
    'launchimage.cpp',
    'legacyskinparser.cpp',
    'pixmapsource.cpp',
    'skincontext.cpp',
    'skinloader.cpp',
    'svgparser.cpp',
    'tooltips.cpp',
])

mixxx_headers += files([ 
    'launchimage.h',
    'legacyskinparser.h',
    'tooltips.h',
])

mixxx_ui += files([ 
])
