mixxx_sources += files([ 
    'sounddevice.cpp',
    'sounddevicenetwork.cpp',
    'sounddeviceportaudio.cpp',
    'soundmanagerconfig.cpp',
    'soundmanager.cpp',
    'soundmanagerutil.cpp',
])

mixxx_headers += files([ 
    'sounddevicenetwork.h',
    'soundmanager.h',
])

mixxx_ui += files([ 
])
