mixxx_sources += files([ 
    'analyserwaveformtest.cpp',
    'analyzersilence_test.cpp',
    'audiotaperpot_test.cpp',
    'autodjprocessor_test.cpp',
    'baseeffecttest.cpp',
    'beatgridtest.cpp',
    'beatmaptest.cpp',
    'beatstranslatetest.cpp',
    'bpmcontrol_test.cpp',
    'broadcastprofile_test.cpp',
    'broadcastsettings_test.cpp',
    'channelhandle_test.cpp',
    'configobject_test.cpp',
    'controllerengine_test.cpp',
    'controller_preset_validation_test.cpp',
    'controlobjecttest.cpp',
    'coverartcache_test.cpp',
    'coverartutils_test.cpp',
    'cratestorage_test.cpp',
    'cuecontrol_test.cpp',
    'dbconnectionpool_test.cpp',
    'dbidtest.cpp',
    'directorydaotest.cpp',
    'duration_test.cpp',
    'durationutiltest.cpp',
    'effectchainslottest.cpp',
    'effectslottest.cpp',
    'effectsmanagertest.cpp',
    'enginebufferscalelineartest.cpp',
    'enginebuffertest.cpp',
    'enginefilterbiquadtest.cpp',
    'enginemastertest.cpp',
    'enginemicrophonetest.cpp',
    'enginesynctest.cpp',
    'globaltrackcache_test.cpp',
    'indexrange_test.cpp',
    'keyutilstest.cpp',
    'lcstest.cpp',
    'learningutilstest.cpp',
    'libraryscannertest.cpp',
    'looping_control_test.cpp',
    'main.cpp',
    'mathutiltest.cpp',
    'metadatatest.cpp',
    'metaknob_link_test.cpp',
    'midicontrollertest.cpp',
    'mixxxtest.cpp',
    'movinginterquartilemean_test.cpp',
    'mpscfifotest.cpp',
    'nativeeffects_test.cpp',
    'performancetimer_test.cpp',
    'playcountertest.cpp',
    'playlisttest.cpp',
    'portmidicontroller_test.cpp',
    'portmidienumeratortest.cpp',
    'queryutiltest.cpp',
    'readaheadmanager_test.cpp',
    'replaygaintest.cpp',
    'rescalertest.cpp',
    'samplebuffertest.cpp',
    'sampleutiltest.cpp',
    'schemamanager_test.cpp',
    'searchqueryparsertest.cpp',
    'signalpathtest.cpp',
    'skincontext_test.cpp',
    'softtakeover_test.cpp',
    'soundproxy_test.cpp',
    'soundsourceproviderregistrytest.cpp',
    'sqliteliketest.cpp',
    'synccontroltest.cpp',
    'tableview_test.cpp',
    'taglibtest.cpp',
    'trackdao_test.cpp',
    'trackexport_test.cpp',
    'tracknumberstest.cpp',
    'trackreftest.cpp',
    'trackupdate_test.cpp',
    'wpushbutton_test.cpp',
    'wwidgetstack_test.cpp',
])

mixxx_headers += files([ 
    'trackexport_test.h',
])

mixxx_ui += files([ 
])
subdir('co_dumps')
subdir('id3-test-data')
subdir('reference_buffers')
subdir('soundFileFormats')
