if has_vinylcontrol
  mixxx_sources += files([ 
    'steadypitch.cpp',
    'vinylcontrol.cpp',
    'vinylcontrolmanager.cpp',
    'vinylcontrolprocessor.cpp',
    'vinylcontrolsignalwidget.cpp',
    'vinylcontrolxwax.cpp',
  ])

  mixxx_headers += files([ 
    'vinylcontrolmanager.h',
    'vinylcontrolprocessor.h',
    'vinylcontrolsignalwidget.h',
  ])

endif
