mixxx_sources += files([ 
    'guitick.cpp',
    'sharedglcontext.cpp',
    'visualplayposition.cpp',
    'visualsmanager.cpp',
    'vsyncthread.cpp',
    'waveform.cpp',
    'waveformfactory.cpp',
    'waveformwidgetfactory.cpp',
])

mixxx_headers += files([ 
    'visualplayposition.h',
    'vsyncthread.h',
    'waveformwidgetfactory.h',
])

mixxx_ui += files([ 
])
subdir('renderers')
subdir('widgets')
