mixxx_sources += files([ 
    'controlwidgetconnection.cpp',
    'hexspinbox.cpp',
    'paintable.cpp',
    'wanalysislibrarytableview.cpp',
    'wbasewidget.cpp',
    'wbattery.cpp',
    'wbeatspinbox.cpp',
    'wcombobox.cpp',
    'wcoverart.cpp',
    'wcoverartlabel.cpp',
    'wcoverartmenu.cpp',
    'wdisplay.cpp',
    'weffectbuttonparameter.cpp',
    'weffectchain.cpp',
    'weffect.cpp',
    'weffectparameterbase.cpp',
    'weffectparameter.cpp',
    'weffectparameterknobcomposed.cpp',
    'weffectparameterknob.cpp',
    'weffectpushbutton.cpp',
    'weffectselector.cpp',
    'wimagestore.cpp',
    'wkey.cpp',
    'wknobcomposed.cpp',
    'wknob.cpp',
    'wlabel.cpp',
    'wlibrary.cpp',
    'wlibrarysidebar.cpp',
    'wlibrarytableview.cpp',
    'wlibrarytextbrowser.cpp',
    'wmainmenubar.cpp',
    'wnumber.cpp',
    'wnumberdb.cpp',
    'wnumberpos.cpp',
    'wnumberrate.cpp',
    'woverview.cpp',
    'woverviewhsv.cpp',
    'woverviewlmh.cpp',
    'woverviewrgb.cpp',
    'wpixmapstore.cpp',
    'wpushbutton.cpp',
    'wrecordingduration.cpp',
    'wsearchlineedit.cpp',
    'wsingletoncontainer.cpp',
    'wsizeawarestack.cpp',
    'wskincolor.cpp',
    'wslidercomposed.cpp',
    'wspinny.cpp',
    'wsplitter.cpp',
    'wstarrating.cpp',
    'wstatuslight.cpp',
    'wtime.cpp',
    'wtrackproperty.cpp',
    'wtracktableview.cpp',
    'wtracktableviewheader.cpp',
    'wtracktext.cpp',
    'wvumeter.cpp',
    'wwaveformviewer.cpp',
    'wwidget.cpp',
    'wwidgetgroup.cpp',
    'wwidgetstack.cpp',
])

mixxx_headers += files([ 
    'controlwidgetconnection.h',
    'wbattery.h',
    'wbeatspinbox.h',
    'wcombobox.h',
    'wcoverart.h',
    'wcoverartlabel.h',
    'wcoverartmenu.h',
    'wdisplay.h',
    'weffectbuttonparameter.h',
    'weffectchain.h',
    'weffect.h',
    'weffectparameterbase.h',
    'weffectparameter.h',
    'weffectparameterknobcomposed.h',
    'weffectparameterknob.h',
    'weffectpushbutton.h',
    'weffectselector.h',
    'wkey.h',
    'wknobcomposed.h',
    'wknob.h',
    'wlabel.h',
    'wlibrary.h',
    'wlibrarysidebar.h',
    'wlibrarytableview.h',
    'wlibrarytextbrowser.h',
    'wmainmenubar.h',
    'wnumberdb.h',
    'wnumber.h',
    'wnumberpos.h',
    'wnumberrate.h',
    'woverview.h',
    'wpushbutton.h',
    'wrecordingduration.h',
    'wsearchlineedit.h',
    'wsingletoncontainer.h',
    'wsizeawarestack.h',
    'wslidercomposed.h',
    'wspinny.h',
    'wsplitter.h',
    'wstarrating.h',
    'wstatuslight.h',
    'wtime.h',
    'wtrackproperty.h',
    'wtracktableview.h',
    'wtracktableviewheader.h',
    'wtracktext.h',
    'wvumeter.h',
    'wwaveformviewer.h',
    'wwidgetgroup.h',
    'wwidget.h',
    'wwidgetstack.h',
])

mixxx_ui += files([ 
])
