if has_bulk
  mixxx_sources += files([ 
    'bulkcontroller.cpp',
    'bulkenumerator.cpp',
  ])

  mixxx_headers += files([ 
    'bulkcontroller.h',
  ])

  # hm?
  #if get_option('hid').enabled()
    #mixxx_sources += files('src/controllers/hid/hidcontrollerpresetfilehandler.cpp')
  #endif
endif

