mixxx_sources += files([ 
    'midicontroller.cpp',
    'midicontrollerpresetfilehandler.cpp',
    'midienumerator.cpp',
    'midimessage.cpp',
    'midioutputhandler.cpp',
    'midiutils.cpp',
    'portmidicontroller.cpp',
    'portmidienumerator.cpp',
])

mixxx_headers += files([ 
    'midicontroller.h',
    'midienumerator.h',
    'midioutputhandler.h',
    'portmidicontroller.h',
    'portmidienumerator.h',
])

if has_hss1394
mixxx_sources += files([ 
    'hss1394controller.cpp',
    'hss1394enumerator.cpp',
  ])

mixxx_headers += files([ 
    'hss1394controller.h',
    'hss1394enumerator.h',
])

endif
