mixxx_sources += files([ 
    'enginebufferscale.cpp',
    'enginebufferscalelinear.cpp',
    'enginebufferscalerubberband.cpp',
    'enginebufferscalest.cpp',
])

mixxx_headers += files([ 
    'enginebufferscale.h',
    'enginebufferscalerubberband.h',
    'enginebufferscalest.h',
])

mixxx_ui += files([ 
])
