mixxx_sources += files([ 
    'bpmcontrol.cpp',
    'clockcontrol.cpp',
    'cuecontrol.cpp',
    'enginecontrol.cpp',
    'keycontrol.cpp',
    'loopingcontrol.cpp',
    'quantizecontrol.cpp',
    'ratecontrol.cpp',
    'vinylcontrolcontrol.cpp',
])

mixxx_headers += files([ 
    'bpmcontrol.h',
    'clockcontrol.h',
    'cuecontrol.h',
    'enginecontrol.h',
    'keycontrol.h',
    'loopingcontrol.h',
    'quantizecontrol.h',
    'ratecontrol.h',
    'vinylcontrolcontrol.h',
])

mixxx_ui += files([ 
])
