mixxx_sources += files([ 
    'enginefilterbessel4.cpp',
    'enginefilterbessel8.cpp',
    'enginefilterbiquad1.cpp',
    'enginefilterbutterworth4.cpp',
    'enginefilterbutterworth8.cpp',
    'enginefilter.cpp',
    'enginefilterlinkwitzriley2.cpp',
    'enginefilterlinkwitzriley4.cpp',
    'enginefilterlinkwitzriley8.cpp',
    'enginefiltermoogladder4.cpp',
])

mixxx_headers += files([ 
    'enginefilterbessel4.h',
    'enginefilterbessel8.h',
    'enginefilterbiquad1.h',
    'enginefilterbutterworth4.h',
    'enginefilterbutterworth8.h',
    'enginefilter.h',
    'enginefilterlinkwitzriley2.h',
    'enginefilterlinkwitzriley4.h',
    'enginefilterlinkwitzriley8.h',
    'enginefiltermoogladder4.h',
])

mixxx_ui += files([ 
])
